nothing is easy

--- a/README.Rmd
+++ b/README.Rmd
@@ -42,7 +42,7 @@ The addin allows you to specify the number of desired paragraphs and sentences.
 
 ### R Markdown
 
-The easiest way to generate _lorem ipsum_ placeholder text is to call 
+Another way to generate _lorem ipsum_ placeholder text is to call 
 `lorem::ipsum()` in an inline R chunk in R Markdown.
 
 ```markdown
