Add badges to readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,9 @@ set.seed(424342)
 # lorem::ipsum()
 
 <!-- badges: start -->
+[![CRAN status](https://www.r-pkg.org/badges/version/lorem)](https://CRAN.R-project.org/package=lorem)
+[![lorem r-universe badge](https://gadenbuie.r-universe.dev/badges/lorem)](https://gadenbuie.r-universe.dev/lorem)
+[![R-CMD-check](https://github.com/gadenbuie/lorem/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/gadenbuie/lorem/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 * Quickly generate lorem ipsum placeholder text with `lorem::ipsum()`.
