--- a/README.Rmd
+++ b/README.Rmd
@@ -30,9 +30,21 @@ set.seed(424342)
 
 ## Installation
 
+You can install the latest released version of lorem from CRAN
+
 ``` r
-# install.package("devtools")
-devtools::install_github("gadenbuie/lorem")
+install.packages("lorem")
+```
+
+or the current development version of lorem from GitHub or r-universe
+
+``` r
+# GitHub
+# install.packages("remotes")
+rmeotes::install_github("gadenbuie/lorem")
+
+# R Universe
+install.packages('lorem', repos = c('https://gadenbuie.r-universe.dev', 'https://cloud.r-project.org'))
 ```
 
 ## Usage
